--- a/test.html.twig
+++ b/test.html.twig
@@ -5,6 +5,6 @@
  <script src="https://cdn.tailwindcss.com"></script>
  </head>
  <body>
- <h1 class="underline text-3xl font-bold bh-sky-700">Hello prettier!</h1>
+ <h1 class="underline text-3xl font-bold bg-sky-700">Hello prettier!</h1>
  </body>
 </html>
