--- a/test.html.twig
+++ b/test.html.twig
@@ -1,10 +1,8 @@
 <html>
- <head>
- <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <script src="https://cdn.tailwindcss.com"></script>
- </head>
- <body>
- <h1 class="underline text-3xl font-bold bg-sky-700">Hello prettier!</h1>
- </body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link href="app.build.css" rel="stylesheet">
+    </head>
+    <body><h1 class="underline text-3xl font-bold bg-sky-700">Hello prettier!</h1></body>
 </html>
